# Prometheus-Framework

./: .gitignore  LICENSE  README.md  odoo_model_schema.json  pyproject.toml
.github/workflows/: deploy.yml
environment/: docker-compose.yml
environment/odoo/config/: odoo.conf
prometheus/config/: settings.py
prometheus/connectors/: neo4j_connector.py  postgres_connector.py
prometheus/genesis_engine/: extractor.py  loader.py  models.py  orchestrator.py
prometheus/genesis_engine/analyzers/: base.py
prometheus/genesis_engine/analyzers/stock/: data_profilers.py  graph_analyzer.py  naming_analyzer.py  schema_analyzer.py
prometheus/genesis_engine/core/: cost_calculator.py  description_synthesizer.py  embedding_generator.py  implicit_relation_finder.py
scripts/: run_enrichment_poc.py  run_scaffolding.py  run_seeder.py  test_config.py  test_extractor.py  test_gemini.py  verify_neo4j.py  verify_postgres.py  verify_vector_search.py
services/extractor/: Dockerfile  entrypoint.py
services/relation-finder/: Dockerfile  entrypoint.py
services/runner/: Dockerfile  entrypoint.py
services/synthesizer/: Dockerfile  entrypoint.py
utils/: data_booster.py
